# geometry-central

./: CMakeLists.txt
include/geometrycentral/surface/: signpost_intrinsic_triangulation.ipp
src/pointcloud/: local_triangulation.cpp
src/surface/: exact_polyhedral_geodesics.cpp  flip_geodesics.cpp  signpost_intrinsic_triangulation.cpp  trace_geodesic.cpp  vector_heat_method.cpp
